# eve

./: .gitignore  Cargo.toml  README.md  config.yml.example  styles.yml  subsitutions.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: bot-site-page.html
src/: client.rs  constants.rs  main.rs  structures.rs
src/commands/: mod.rs
src/commands/general/: help.rs  mod.rs  ping.rs
src/commands/stablediffusion/: imagine.rs  mod.rs  report.rs  show.rs
src/database/: cassandra.rs  mod.rs  schema.rs
src/database/cql/: FLAG_IMAGE.sql  INSERT_IMAGE.sql  SHOW_RANDOM.sql  SHOW_VIA_ID.sql
src/events/: mod.rs  on_ready.rs
src/util/: error_handling.rs  mod.rs  string.rs  types.rs
