[package]
name = "eve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
cdrs-tokio = "7.0.4"
cdrs-tokio-helpers-derive = "5.0.1"
chrono = "0.4.23"
darkredis = "0.8.0"
env_logger = "0.10.0"
image = "0.24.5"
log = "0.4.17"
num_cpus = "1.15.0"
once_cell = "1.16.0"
poise = "0.5.2"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.151"
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = [ "v4" ] }
